<resources>
    <string name="app_name">Fastertable</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Fastertable</string>
    <string name="message_subscribe_failed">Failed to subscribe to topic</string>
    <string name="message_subscribed">Subscribed to topic</string>
    <string name="company_login_title">Fastertable Login</string>
    <string name="company_login">Enter Company Login</string>
    <string name="company_login_edit">Company Login</string>
    <string name="company_password">Enter Company Password</string>
    <string name="company_password_edit">Company Password</string>
    <string name="login">Login</string>
    <string name="dashboard">Dashboard</string>
    <string name="notification_title">Faster Orders</string>
    <string name="notification_text">A new order has arrived!!</string>
    <string name="order_received">New Order Received</string>
    <string name="faster_order_channel_id" translatable="false">order_channel</string>
    <string name="faster_order_notification_channel_name" translatable="true">Faster Web Orders</string>
    <string name="fastertable_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="fastertable_notification_channel_name" translatable="true">Faster Orders</string>
    <string name="accept">Accept</string>
    <string name="error_title">Error Notification</string>
    <string name="error_message">An error occurred. Please try again or contact your system administrator.</string>
    <string name="string_order">Order</string>
    <string name="string_customer">Customer</string>
    <string name="string_telephone">Telephone</string>
    <string name="order_number">Order #:</string>
    <string name="time_received">Time:</string>
    <string name="number_placeholder">100</string>
    <string name="telephone_placeholder">5556667777</string>
    <string name="string_quantity">Qty</string>
    <string name="string_item">Item</string>
    <string name="string_price">Price</string>
    <string name="string_subtotal">Subtotal</string>
    <string name="string_saleTax">Tax</string>
    <string name="string_total">Total</string>
    <string name="string_mods">mods</string>
    <string name="string_ingredients">Ingredients</string>
    <string name="save">Save</string>
    <string name="string_orders">Orders</string>
    <string name="string_my_orders">My Orders</string>
    <string name="string_one">1</string>
    <string name="string_two">2</string>
    <string name="string_three">3</string>
    <string name="string_four">4</string>
    <string name="string_five">5</string>
    <string name="string_six">6</string>
    <string name="string_seven">7</string>
    <string name="string_eight">8</string>
    <string name="string_nine">9</string>
    <string name="string_zero">0</string>
    <string name="string_clear">Clear</string>
    <string name="string_enter">Enter</string>
    <string name="restaurant_login">Restaurant Login</string>
    <string name="user_login">User Login</string>
    <string name="restaurant_pin">Restaurant Pin</string>
    <string name="user_pin">User Pin</string>
    <string name="string_terminal">Terminals</string>
    <string name="terminal_instructions">Terminals determine where credit cards are processed and where receipts are printed.</string>
    <string name="select">Select</string>
    <string name="company_error">There was an error logging you into the system. Please check your login and password and try again.</string>
    <string name="pin_invalid">The PIN you have entered is not recognized.</string>
    <string name="open_orders">Open Orders</string>
    <string name="closed_orders">Closed Orders</string>
    <string name="all_orders">All Orders</string>
    <string name="counter_order">Counter Order</string>
    <string name="table_order">Table Order</string>
    <string name="takeout_order">Takeout Order</string>
    <string name="delivery_order">Delivery Order</string>
    <string name="continue_txt">Continue</string>
    <string name="string_order_number">Order #</string>
    <string name="string_guest">Guest</string>
    <string name="string_order_type">Order Type</string>
    <string name="string_table_number">Table</string>
    <string name="string_employee">Employee</string>
    <string name="string_start_time">Start Time</string>
    <string name="string_close_time">Close Time</string>
    <string name="exit">Exit</string>
    <string name="add_guest">Add Guest</string>
    <string name="reorder_drinks">Reorder Drinks</string>
    <string name="todo">TODO</string>
    <string name="guests">Guests</string>
    <string name="order_item_notes_dialog_title">Order Item Notes</string>
    <string name="order_item_notes_dialog_message">Enter specific notes for this item:</string>
    <string name="guest_with_number">Guest %1$s</string>
    <string name="more">More</string>
    <string name="transfer_order">Transfer Order</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_items">Menu Items</string>
    <string name="back">Back</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="mod_required">Selection Required</string>
    <string name="string_add_guest">add guest</string>
    <string name="add_item_to_order">Add Item to Order</string>
    <string name="button_order_note">button order note</string>
    <string name="add_your_notes">Add your notes</string>
    <string name="payment">Payment</string>
    <string name="send_kitchen">Send to Kitchen</string>
    <string name="fastertable_logo">fastertable logo</string>
    <string name="kitchen_warning_title">No Changes to Send</string>
    <string name="kitchen_warning_message">All order items have been sent to the kitchen.</string>
    <string name="payment_warning_message1">The order has no order items.</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_NoMake">Do Not Make</string>
    <string name="dialog_Takeout">Takeout</string>
    <string name="assign_table_title">Assign Order to Table</string>
    <string name="assign_table_message">Enter a table number:</string>
    <string name="item_more">item more</string>
    <string name="rush">Rush</string>
    <string name="item_rush">item rush</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="reorder_drinks_title">Reorder Drinks</string>
    <string name="single_ticket">Single Ticket</string>
    <string name="manage_payment">Split Checks</string>
    <string name="pay_cash">Pay Cash</string>
    <string name="pay_credit">Pay with Card</string>
    <string name="cancel_credit">Cancel Credit</string>
    <string name="split_evenly">Split Evenly</string>
    <string name="split_by_guest">Split by Guest</string>
    <string name="ticket_with_number">Ticket %1$s</string>
    <string name="item_price">$%1$s</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>
    <string name="total">Total:</string>
    <string name="subtotal_price">$%1$s</string>
    <string name="tax_price">$%1$s</string>
    <string name="total_price">$%1$s</string>
    <string name="amount_owed">Amount Owed: $%1$s</string>
    <string name="amount_owed_empty">Amount Owed:</string>
    <string name="string_exact_amount">Exact</string>
    <string name="twenty_bucks">$20</string>
    <string name="forty_bucks">$40</string>
    <string name="string_decimal">.</string>
    <string name="hundred_bucks">$100</string>
    <string name="paid_amount">$</string>
    <string name="submit_payment">Submit Payment</string>
    <string name="cash_back_change_due">Cash Back - Change Due!</string>
    <string name="paid_in_full">--- PAID IN FULL ---</string>
    <string name="ticket_options">Ticket Options</string>
    <string name="void_ticket">Void All Ticket Items</string>
    <string name="discount_ticket">Discount Ticket</string>
    <string name="approval_pending">Approval Pending</string>
    <string name="manager_approvals">Manager Approvals</string>
    <string name="pending_approvals">Pending</string>
    <string name="completed_approvals">Completed</string>
    <string name="order_with_number">Order %1$s</string>
    <string name="approval">Approval</string>
    <string name="discount_price">Discount Price</string>
    <string name="approve_or_reject_the_manager_approval">Manager Approval</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="discount">Discount</string>
    <string name="cancel_discount">Cancel Discount</string>
    <string name="requested_by">Requested by %1$s</string>
    <string name="discount_total_price">Total Discount: $%1$s</string>
    <string name="ticket_item_options">Ticket Item Options</string>
    <string name="void_item">Void Item</string>
    <string name="discount_item">Discount Item</string>
    <string name="modify_price">Modify Price</string>
    <string name="cancel_modify_price">Cancel Modify Price</string>
    <string name="enter_the_new_price">Enter the new price:</string>
    <string name="new_price">New Price</string>
    <string name="checkout">Checkout</string>
    <string name="today_s_orders">Today\'s Orders</string>
    <string name="date_back">Date Back</string>
    <string name="date">Date</string>
    <string name="date_forward">Date Forward</string>
    <string name="total_owed">Total Owed</string>
    <string name="total_owed_you">Total Owed to you:</string>
    <string name="total_owed_house">Total Owed from you:</string>
    <string name="total_sales">Total Sales:</string>
    <string name="cash_sales">Cash Sales:</string>
    <string name="credit_sales">Credit Sales:</string>
    <string name="order_count">Order Count:</string>
    <string name="total_tips">Total Tips:</string>
    <string name="clock_in">Clock In:</string>
    <string name="clock_out">Clock Out:</string>
    <string name="total_voids">Voids:</string>
    <string name="total_discounts">Discounts:</string>
    <string name="bus_tip_share">Busboy Tip Share:</string>
    <string name="bar_tip_share">Bar Tip Share:</string>
    <string name="still_on_shift">Still on Shift</string>
    <string name="no_shifts_for_today">No shifts for today</string>
    <string name="checkout_orders">Checkout Orders</string>
    <string name="checkout_payments">Checkout Payments</string>
    <string name="checkout_total">Total</string>
    <string name="add_tip">Add Tips</string>
    <string name="add_a_tip_to_this_ticket">Enter the tip amount:</string>
    <string name="clockout">Clockout</string>
    <string name="confirm">Confirm</string>
    <string name="server">Server</string>
    <string name="total_tickets">Total Tickets</string>
    <string name="clockin">Clockin</string>
    <string name="totalsales">Total Sales</string>
    <string name="total_cash">Total Cash</string>
    <string name="totaltips">Total Tips</string>
    <string name="string_payment_type">Pay Type</string>
    <string name="add_menu_item_for_this_order_only">Add Menu Item for this Order Only</string>
    <string name="menu_item_name">Menu Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price_per_item">Price per Item</string>
    <string name="food">Food</string>
    <string name="bar">Bar</string>
    <string name="inventory">Inventory</string>
    <string name="string_new">New</string>
    <string name="remove">Remove</string>
    <string name="settings">Settings</string>
</resources>