<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_employee_name"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingStart="12dp"
            android:width="200dp"
            android:text="@string/server"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/txt_clock_in"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/clockin"
            android:width="90dp"
            app:layout_constraintStart_toEndOf="@+id/txt_employee_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_clock_out"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:width="90dp"
            android:text="@string/clockout"
            app:layout_constraintStart_toEndOf="@+id/txt_clock_in"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_tickets_number"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:width="110dp"
            android:text="@string/total_tickets"
            app:layout_constraintStart_toEndOf="@+id/txt_clock_out"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_payment_total"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/totalsales"
            app:layout_constraintStart_toEndOf="@+id/txt_tickets_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_cash_total"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/total_cash"
            app:layout_constraintStart_toEndOf="@+id/txt_payment_total"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_credit_tips"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/totaltips"
            app:layout_constraintStart_toEndOf="@+id/txt_cash_total"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_total_owed"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/total_owed"
            app:layout_constraintStart_toEndOf="@+id/txt_credit_tips"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_open_orders"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="110dp"
            android:layout_marginTop="16dp"
            android:textAlignment="center"
            android:text="@string/open_orders"
            app:layout_constraintStart_toEndOf="@+id/txt_total_owed"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_confirm"
            style="@style/checkout_grid_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:width="150dp"
            android:text="@string/confirm"
            app:layout_constraintStart_toEndOf="@+id/txt_open_orders"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


