<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="order"
            type="com.fastertable.fastertable.data.models.Order" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_grid">

        <TextView
            android:id="@+id/txt_order_number"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="80dp"
            android:text="@string/string_order_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_order_type"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_order_type"
            app:layout_constraintStart_toEndOf="@+id/txt_order_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_table_number"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_table_number"
            app:layout_constraintStart_toEndOf="@+id/txt_order_type"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_employee_name"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_employee"
            app:layout_constraintStart_toEndOf="@+id/txt_table_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_start_time"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_start_time"
            app:layout_constraintStart_toEndOf="@+id/txt_employee_name"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_close_time"
            style="@style/order_header_grid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_close_time"
            app:layout_constraintStart_toEndOf="@+id/txt_start_time"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
