<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <data>
        <variable
            name="order"
            type="com.fastertable.fastertable2022.data.models.Order" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_transfer_order_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="80dp"
        android:layout_marginStart="57dp"
        android:text="@string/string_order_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_transfer_order_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_order_type"
        app:layout_constraintStart_toEndOf="@+id/txt_transfer_order_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_transfer_table_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_table_number"
        android:layout_marginStart="62dp"
        app:layout_constraintStart_toEndOf="@+id/txt_transfer_order_type"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_transfer_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_start_time"
        android:layout_marginStart="100dp"
        app:layout_constraintStart_toEndOf="@+id/txt_transfer_table_number"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>