<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/lbl_adhoc_title"
        style="@style/bottom_sheet_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/add_menu_item_for_this_order_only"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_adhoc_name"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:hint="@string/menu_item_name"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_adhoc_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_adhoc_name"
            style="@style/InputEditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"
            android:textSize="@dimen/d21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_adhoc_quantity"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/quantity"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_adhoc_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_adhoc_quantity"
            style="@style/InputEditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:text="1"
            android:textSize="@dimen/d21" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout_adhoc_price"
        style="@style/CreditCardInputLayoutBoxes"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/price_per_item"
        app:errorEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_adhoc_quantity">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_adhoc_price"
            style="@style/InputEditTexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textSize="@dimen/d21" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radio_sales_category"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checkedButton="@+id/radio_button_1"
        android:orientation="horizontal"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_adhoc_price">

        <RadioButton
            android:id="@+id/radio_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:checked="true"
            android:textSize="@dimen/d21" />

        <RadioButton
            android:id="@+id/radio_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bar"
            android:textSize="@dimen/d21" />

        <RadioButton
            android:id="@+id/radio_inventory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inventory"
            android:textSize="@dimen/d21" />

    </RadioGroup>

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->

    <Button
        android:id="@+id/btn_adhoc_item_add"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/d24"
        android:text="@string/add_item_to_order"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_sales_category"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>